feat: implement multiple chat enhancements
- Add feature allowing users to reply to specific messages
- Implement 'user is typing' status indicator
- Add emoji selector for inserting emojis in messages
- Display number of currently online users
- Show timestamp for each sent message

--- a/public/index.html
+++ b/public/index.html
@@ -6,15 +6,19 @@
     <title>Secure Chat</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/emoji-picker-element@^1/index.min.css">
     <link rel="stylesheet" href="style.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.1.1/crypto-js.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/emoji-picker-element@^1/index.js" type="module"></script>
 </head>
 <body>
     <div class="chat-container">
         <div class="chat-header">
             <h1>Secure Chat</h1>
+            <div id="online-users">Online: 0</div>
         </div>
         <div class="chat-messages" id="messages"></div>
+        <div id="typing-indicator"></div>
         <div class="chat-input-container">
             <div class="encryption-controls">
                 <input type="text" id="encryption-key" placeholder="Enter encryption key">
@@ -22,6 +26,7 @@
             </div>
             <form id="chat-form" class="chat-input">
                 <input id="chat-input" type="text" placeholder="Type a message..." autocomplete="off">
+                <button type="button" id="emoji-button"><i class="far fa-smile"></i></button>
                 <label for="image-upload" class="image-upload-label">
                     <i class="fas fa-image"></i>
                 </label>
@@ -29,6 +34,9 @@
                 <button type="submit"><i class="fas fa-paper-plane"></i></button>
             </form>
         </div>
+    </div>
+    <div id="emoji-picker-container" style="display: none;">
+        <emoji-picker></emoji-picker>
     </div>
     <script src="/socket.io/socket.io.js"></script>
     <script src="script.js"></script>
